SFDC-DX/src/objects/Position__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Close_date__c</fullName>
        <label>Close date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Opened__c</fullName>
        <formula>IF( ISBLANK( Close_date__c ) ,  TODAY()  -  Open_Date__c ,  Close_date__c  -  Open_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Opened</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Function_Area__c</fullName>
        <label>Function_Area</label>
        <picklist>
            <controllingField>Location__c</controllingField>
            <picklistValues>
                <fullName>Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hiring_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hiring Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Positions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Java__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Java</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Javascript__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Javascript</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_description__c</fullName>
        <label>Job description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>Austin,TX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London,England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sydney,Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New York,NY</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Max_Pay__c</fullName>
        <label>Max Pay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Pay__c</fullName>
        <label>Min Pay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Open_Date__c</fullName>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Position_Status__c</fullName>
        <label>Position Status</label>
        <picklist>
            <picklistValues>
                <fullName>receive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>approve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>offered</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Skill_Required__c</fullName>
        <label>Skill Required</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New position</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed-Not Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed-Cancelled</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Travel_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Travel Required</label>
        <type>Checkbox</type>
    </fields>
    <label>Position</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Position Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Positions</pluralLabel>
    <recordTypes>
        <fullName>IT_Positions</fullName>
        <active>true</active>
        <label>IT Positions</label>
    </recordTypes>
    <recordTypes>
        <fullName>Non_IT_Positions</fullName>
        <active>true</active>
        <label>Non IT Positions</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Min_Pay_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>Min_Pay__c  &gt;  Max_Pay__c</errorConditionFormula>
        <errorMessage>Minimum  Pay should not be greater than Max pay</errorMessage>
    </validationRules>
</CustomObject>